# KuMyS-Artifact-Manager

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  formate_code.sh
common-include/: HeavyJson.h  HeavyJson.hpp  LightJson.h  LightJson.hpp
include/: DatabaseManager.h  HeavyJson.h
main-server/: CMakeLists.txt  Dockerfile  README.md  repos.list
main-server/include/: DatabaseManager.h  HeavyJson.h  HttpServer.h  LightJson.h  PackageDownloader.h  RequestHandler.h  ServerApp.h
main-server/src/: DatabaseManager.cpp  HttpServer.cpp  PackageDownloader.cpp  RequestHandler.cpp  ServerApp.cpp  main.cpp
main-server/tests/: CMakeLists.txt  test_databasemanager.cpp  test_httpserver.cpp  test_main.cpp  test_packagedownloader.cpp  test_requesthandler.cpp
proxy-server/: CMakeLists.txt  Dockerfile  README.md  nginx.conf
proxy-server/admin-assets/: login-passwords
proxy-server/admin-assets/html/: blocked-list.html  index.html
proxy-server/admin-assets/js/: blocked-list.js
proxy-server/include/: admin_panel.hpp  buffer.h  buffer.hpp  validate_request_module.h  validate_request_module.hpp
proxy-server/src/: admin_panel.cpp  buffer.cpp  main.cpp  main_admin_panel.cpp  main_buffer.cpp  main_validate_request_module.cpp  validate_request_module.cpp
scripts/: apt_config.sh
scripts/proxy-server/: build_modules.sh  start_admin_panel.sh  start_buffer.sh  start_nginx.sh  start_validate_module.sh
src/: PackageDownloader.cpp  RequestHandler.cpp  main.cpp
srcipts/: formate_code.sh
